tests/neg-macros/annot-on-class/Test_2.scala
@voidAnnot
class A // error

class B:
  @voidAnnot
  class C // error

  def test =
    @voidAnnot
    class D // error
    ()
